# django-project-template

./: .dockerignore  .editorconfig  .env.example  .env.prod  .gitignore  .pre-commit-config.yaml  AUTORS.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  pytest.ini  setup.cfg
apps/core/: models.py
nginx/: Dockerfile  nginx.conf
project_name/: asgi.py  urls.py  wsgi.py
project_name/settings/: base.py  develop.py  production.py
templates/: base.html
